[package]
name = "dcrdrs"
version = "0.1.0"
authors = ["michael <utimichael9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[features]
default = ["rpcclient"]
rpcclient = ["tokio-tungstenite", "native-tls", "reqwest", "tungstenite"]

[[bench]]
name = "benches"
harness = false
path = "benches/lib.rs"

[[example]]
name = "rpcclient"
path = "examples/rpcclient.rs"
required-features = ["tokio"]

[dependencies]
dirs = "3.0.1"
base64 = "0.12.3"
reqwest = {version = "^0.10.8", optional = true}
native-tls = {version = "^0.2.4", optional = true}
tokio-tungstenite = {version = "*", features = ["tls"], optional = true}
tungstenite = {version = "*", optional = true}
url = "*"
httparse = "*"
futures = "*"
async-std = "1.6.3"
log = "^0.4.11"
socks = "*"
tokio = { version = "^0.2", features = ["full"] }
tokio-native-tls = "^0.1.0"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }