[package]
name = "rustdcr"
version = "0.1.0"
authors = ["michael <utimichael9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[features]
default = ["rpcclient"]
rpcclient = ["tokio-tungstenite", "tokio-native-tls", "native-tls", "httparse", "dcrutil", "reqwest"]
dcrutil = ["dirs"]

[[bench]]
name = "benches"
harness = false
path = "benches/lib.rs"

[[example]]
name = "rpcclient"
path = "examples/rpcclient.rs"

[[example]]
name = "gui_rpcclient"
path = "examples/gui_rpcclient.rs"
required-features = ["iced"]

[dependencies]
# Required Dependencies.
base64 = "0.12.3"
futures = "^0.3.5"
log = "^0.4.11"
async-std = "1.6.3"
tokio = { version = "^0.2", features = ["full"] }
ring = "^0.16"
hex = "^0.4"

# App Data Dir Package.
dirs = { version = "^3.0.1", optional = true }

# GUI Example
iced = { version = "^0.1.1", optional = true }

# Rpc Client Dependencies.
tokio-native-tls = { version = "^0.1.0", optional = true }
native-tls = { version = "^0.2.4", optional = true }
httparse = { version = "^1.3", optional = true }
tokio-tungstenite = {version = "*", features = ["tls"], optional = true}
tungstenite = { version = "*", optional = true }
reqwest = { version = "^0.10.8", optional = true }

serde_json = "*"
serde = { version = "1.0", features = ["derive"] }

# Subject for removal.
pretty_env_logger = "0.4"
env_logger = "*"

slog = "*"
slog-scope = "*"
slog-stdlog = "*"
slog-term = "*"
