[package]
name = "rustdcr"
version = "0.1.0"
authors = ["michael <utimichael9@gmail.com>"]
edition = "2021"

[dev-dependencies]
criterion = "0.3"
pretty_env_logger = "0.4"
env_logger = "*"

[features]
default = ["dcrutil"]
dcrutil = ["dirs"]

[[bench]]
name = "benches"
harness = false
path = "benches/lib.rs"

[dependencies]
# Required Dependencies.
base64 = "0.12.3"
bitcoin_hashes = "0.10.0"
tokio = { version = "^0.2", features = ["full"] }
log = "^0.4.11"
ring = "^0.16"
hex = "^0.4"

# App Data Dir Package.
dirs = { version = "^3.0.1", optional = true }

# Rpc Client Dependencies.
serde_json = "*"
serde = { version = "^1.0", features = ["derive"] }