[package]
name = "rustdcr"
version = "0.1.0"
authors = ["michael <utimichael9@gmail.com>"]
edition = "2021"

[dev-dependencies]
criterion = "0.3.5"
pretty_env_logger = "0.4.0"

[features]
default = ["dcrutil", "rpcclient"]
dcrutil = ["dirs"]
rpcclient = ["dcrutil", "tokio-tungstenite", "tokio-native-tls", "futures-util", "reqwest", "httparse", "futures-channel" ]

[[bench]]
name = "benches"
harness = false
path = "benches/lib.rs"

[dependencies]
# Required Dependencies.
base64 = "0.12.3"
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4.11"
ring = "0.16.20"
hex = "0.4.3"

# App Data Dir Package.
dirs = { version = "4.0.0", optional = true }

# Rpc Client Dependencies.
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
thiserror = "1.0"
futures-util = { version = "0.3.17", features = ["io"], optional = true }
futures-channel = { version = "0.3.17", optional = true }
reqwest = { version = "0.11.6", optional = true }
httparse = { version = "1.5.1", optional = true }