[package]
name = "politeia"
version = "0.1.0"
authors = ["michael <utimichael9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10.8", features = ["cookies"] }
serde_json = "*"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^0.2", features = ["full"] }
pretty_env_logger = "*"
log = "*"